Fixed some spelling

--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
 					<!-- Lists -->
 						<div class="row">
 							<div class="8u">
-								<section><header class="major"><h2>Southern California Welder </h2>
+								<section><header class="major"><h2>Southern California Welder</h2>
 										<span class="byline">We serve all of San Diego County, parts of Riverside County, San Clemente, and Anaheim.</span>
-									</header><div class="row">
+									</header>
+                  <div class="row">
 										<section class="6u">
                       <ul class="default">
                         <li class="hiddenText">Central San Diego - Coronado, Downtown, Mission Beach, Ocean Beach, Pacific Beach, Old Town, Little Italy, Hillcrest, North Park, Kensington, MIssion Valley, Fashion Valley, Clairemont, Mira Mesa and Kearny Mesa.</li>
@@ -116,16 +117,19 @@
                         <li class="hiddenText">Interstate 15 Corridor - Poway, Rancho Bernardo, Rancho Penaquistos, and Ramona.</li>
 												<li class="hiddenText">Highway 78 Corridor - Vista, San Marcos, Escondido, Fallbrook, and Valley Center.</li>
 												<li class="hiddenText">Outlying Areas - Julian, Borrego Springs, Camp Pendelton, Warner Springs, and Mount Palomar.</li>
-											</ul></section></div>
-								</section></div>
+											</ul>
+                    </section>
+                  </div>
+								</section>
+              </div>
 							<div class="4u">
 								<section><header class="major"><h2>Contact Us</h2>
 									</header><ul class="contact"><li>
 											<span class="address">Address</span>
-											<span>554 Taylor ST <br>Vista, CA 92084</span>
+											<span>554 Taylor Street <br>Vista, CA 92084</span>
 										</li>
 										<li>
-											<span class="mail">Mail</span>
+											<span class="mail">Email</span>
 											<span><a href="#">julian@sky-welding.com</a></span>
 										</li>
 										<li>
