--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Sky-Welding</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />	  	  
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
